--- a/style.css
+++ b/style.css
@@ -1,137 +1,169 @@
-
-/* Reset de estilos */
+/* Estilos generales */
 * {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
 }
-/* Estilos generales */
+
 body {
-  font-family: Arial, sans-serif;
-  background-color: #fff;
-  color: #222;
-  line-height: 1.5;
+  background-color: #1e1e1e;
+  color: #f1f1f1;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
+/* Estilos de encabezados */
+h1 {
+  text-align: center;
+  margin: 2rem 0;
+  font-size: 3rem;
+  text-transform: uppercase;
 }
 
-/* Estilos para la sección Categories */
+h2 {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+/* Estilos de categorías */
 #Categories {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: 20px;
+  background-color: #2b2b2b;
+  padding: 2rem;
+  border-radius: 10px;
 }
 
-#Categories h3 {
-  font-size: 28px;
-  font-weight: bold;
+h3 {
+  font-size: 1.5rem;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
 }
 
-#Categories > div {
-  flex-basis: calc(25% - 20px);
-  margin-right: 20px;
-  margin-bottom: 20px;
-}
-
-#Categories > div:last-of-type {
-  margin-right: 0;
-}
-
-#Categories table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px;
-}
-
-#Categories table th,
-#Categories table td {
-  padding: 10px;
-  border: 1px solid #222;
-  text-align: center;
-}
-
-#Categories table th {
-  font-weight: bold;
-  background-color: #000;
-  color: #fff;
-}
-
-#Categories .inputs {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 20px;
-}
-
-#Categories .inputs label {
-  flex-basis: 100%;
-  margin-bottom: 10px;
-  font-weight: bold;
-}
-
-#Categories .inputs input {
-  flex-basis: 100%;
-  margin-bottom: 20px;
-  padding: 10px;
-  border: 1px solid #222;
-}
-
-#Categories .btnNewProd {
-  display: block;
-  margin: 0 auto;
-  padding: 10px 20px;
-  border: none;
-  background-color: #000;
-  color: #fff;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-#Categories .btnNewProd:hover {
-  background-color: #fff;
-  color: #000;
-}
-
-#Categories fieldset {
-  border: none;
-  margin-bottom: 20px;
-}
-
-#Categories fieldset p {
-  font-size: 14px;
-  color: #666;
-}
-
-/* Estilos específicos para los div de market, drinks, cleaning y personalCare */
+/* Estilos de productos */
 #market,
 #drinks,
 #cleaning,
 #personalCare {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #fff;
-  border: 1px solid #222;
-  border-radius: 5px;
-  padding: 20px;
-  margin-bottom: 20px;
+  display: block;
+  margin-bottom: 2rem;
+  border-radius: 10px;
 }
 
-#market h4,
-#drinks h4,
-#cleaning h4,
-#personalCare h4 {
-  flex-basis: 100%;
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 20px;
+.emptyList{
+  align-content: center;
   text-align: center;
+  font-size: 19px;
+  letter-spacing: 1px;
+  color:#a7a7a7;
+  padding-top:1%;
+}
+
+h4 {
+  font-size: 1.2rem;
+  padding: 1rem;
+  background-color: #3c3c3c;
+  border-radius: 10px 10px 0 0;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+.promDiv{
+  display:flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.promBox{
+  display:block; 
+  text-align: center;
+  font-size: 19px;
+  letter-spacing: 1px;
+  color: rgb(209, 255, 255);
+  height: 4rem;
+  width: 35rem;
+  background-color: #252529;
+  padding-top: 5px;
+}
+
+th,
+td {
+  text-align: left;
+  padding: 0.5rem;
+}
+
+
+th {
+  background-color: #4d4d4d;
+  border-bottom: 1px solid #f1f1f1;
+}
+
+tr:nth-child(even) {
+  background-color: #3c3c3c;
+}
+
+tr:hover {
+  background-color: #2b2b2b;
+}
+
+/* Estilos de inputs y botón */
+.inputs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+label {
+  display: block;
+  margin-right: 1rem;
+  font-size: 1rem;
+}
+
+input[type="text"],
+input[type="number"] {
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: none;
+  background-color: #3c3c3c;
+  color: #f1f1f1;
+  margin-right: 1rem;
+}
+
+button.btnNewProd {
+  display: block;
+  margin: 0 auto;
+  padding: 0.5rem 2rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #4d4d4d;
+  color: #f1f1f1;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button.btnNewProd:hover {
+  background-color: #3c3c3c;
+}
+
+button.eraseProd {
+  display: block;
+  margin: 0 auto;
+  padding: 0.5rem 2rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #5e0000cb;
+  color: #f1f1f1;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button.eraseProd:hover {
+  background-color: #300000c2;
 }
