--- a/style.css
+++ b/style.css
@@ -6,6 +6,51 @@
   padding: 0;
 }
 
+.nav{
+  display:flex;
+  list-style: none;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #4d4d4d;
+  height: 3rem;
+  width: 80%;
+}
+.nav a{
+  text-decoration: none;
+  font-size: 19px;
+  letter-spacing: 1px;
+  color: rgb(209, 255, 255);
+}
+
+nav{
+  display:flex;
+  width: 100%;
+}
+
+.weather{
+  height: 3rem;
+  width: 20%;
+  padding-left: 1%;
+}
+.weather p{
+  height: 40%;
+}
+.weather div{
+  display:flex;
+  width: 100%;
+  height: 60%;
+}
+
+.weather div p{
+  width:90%;
+  height: 100%;
+  padding-left:2% ;
+}
+.weather div img{
+  width:10%;
+  object-view-box: inset(20% 20% 20% 20%);
+}
+
 body {
   background-color: #1e1e1e;
   color: #f1f1f1;
