--- a/style.css
+++ b/style.css
@@ -169,7 +169,8 @@ label {
 }
 
 input[type="text"],
-input[type="number"] {
+input[type="number"],
+select {
   padding: 0.5rem;
   font-size: 1rem;
   border-radius: 5px;
@@ -177,6 +178,9 @@ input[type="number"] {
   background-color: #3c3c3c;
   color: #f1f1f1;
   margin-right: 1rem;
+}
+select{
+  place-content: "hola";
 }
 
 button.btnNewProd {
